Update: Count bookmarks
Counting the number of bookmarks

--- a/count-tabs/manifest.json
+++ b/count-tabs/manifest.json
@@ -11,5 +11,6 @@
             "16": "icons/tab.png",
             "48": "icons/tab.png"
         }
-    }
+    },
+    "permissions": ["bookmarks"]
 }
