Update: Async Data Response, Name and Todo
Changing background.js to respond asynchronously
Changing name to browser-data

--- a/count-tabs/manifest.json
+++ b/count-tabs/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "counttabs",
-    "description": "Counts tabsk",
+    "name": "Browser-data",
+    "description": "Get Browser data",
     "manifest_version": 3,
     "version": "0.1",
     "background": {
