--- a/browser-data/manifest.json
+++ b/browser-data/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Browser-data",
-    "description": "Get Browser data",
+    "description": "Get Browser data like tab and window counts, history and memory",
     "manifest_version": 3,
     "version": "0.1",
     "background": {
@@ -13,5 +13,5 @@
         }, 
         "default_popup": "popup.html"
     },
-    "permissions": ["bookmarks"]
+    "permissions": ["bookmarks", "history"]
 }
