Update: Synchronizing tab and window updates
Modularizing logic and adding listeners for tabs and windows.

--- a/browser-data/manifest.json
+++ b/browser-data/manifest.json
@@ -8,8 +8,8 @@
     },
     "action": {
         "default_icon": {
-            "16": "icons/tab.png",
-            "48": "icons/tab.png"
+            "16": "icons/browser.png",
+            "48": "icons/browser.png"
         }, 
         "default_popup": "popup.html"
     },
