--- a/browser-data/manifest.json
+++ b/browser-data/manifest.json
@@ -13,5 +13,5 @@
         }, 
         "default_popup": "popup.html"
     },
-    "permissions": ["bookmarks", "history"]
+    "permissions": ["bookmarks", "history", "storage"]
 }
