--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
+    "name": "Browser-data",
+    "description": "Get Browser data like tab and window counts, history and memory",
     "manifest_version": 3,
-    "name": "Booky-Marky",
-    "version": "0.1.0",
-    "description": "",
+    "version": "0.1",
     "background": {
-        "service_worker": "background.js",
-        "type": "module"
+        "service_worker": "background.js"
     },
     "action": {
-       
+        "default_icon": {
+            "16": "icons/browser.png",
+            "48": "icons/browser.png"
+        }, 
+        "default_popup": "popup.html"
     },
-    "permissions": ["scripting", "activeTab", "bookmarks", "tabs"],
-    "host_permissions": [
-        "http://*/*",
-        "https://*/*"
-    ]
+    "permissions": ["bookmarks", "history", "storage"]
 }
