--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,25 @@
 {
     "manifest_version": 3,
     "name": "Booky-Marky",
-    "version": "0.1.0",
+    "version": "0.1",
     "description": "",
     "background": {
         "service_worker": "background.js",
         "type": "module"
     },
     "action": {
-       
+        "default_icon": {
+            "16": "icons/bookmark.svg",
+            "48": "icons/bookmark.svg",
+            "128": "icons/bookmark.svg"
+        }
     },
-    "permissions": ["scripting", "activeTab", "bookmarks", "tabs"],
+    "permissions": [
+        "scripting",
+        "activeTab",
+        "bookmarks",
+        "tabs"
+    ],
     "host_permissions": [
         "http://*/*",
         "https://*/*"
