--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+
+/** export-ignore
+
+# Released sub folder   
+!/browser-data/*
