--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,17 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+
+### Export -ignores
+bookmark-productivity/ export-ignore
+bookmark-productivity/** export-ignore
+
+# browser-data/src/ export-ignore
+browser-data/TODO.md export-ignore
+
+*.zip export-ignore
+# README.md export-ignore
+
+.gitattributes export-ignore
+.gitignore export-ignore
+
