Squashed commit of the following:
commit 1e257a7d143cf768764cced7d49983048a71e9f8
Author: Egbaiyelo <moteniolaegbaiyelo@trentu.ca>
Date:   Thu Sep 4 23:01:00 2025 -0400

    Inactive tabs fix

    commit 66dd01e7291cd8f3a1ef88c3765654360a110adb
    Author: Egbaiyelo <moteniolaegbaiyelo@trentu.ca>
    Date:   Thu Sep 4 22:54:29 2025 -0400

        Package: trying to package the archive

    commit 50c4768298fda73adee8f1df9a7238683e3c805c
    Author: Egbaiyelo <moteniolaegbaiyelo@trentu.ca>
    Date:   Sun Aug 17 11:55:07 2025 -0400

        BrD Fix: Inactive tabs count

        Fixing the inactive tabs count
        Mistook inactive for inactive tabs (it meant tabs focused on each window or something)
        right member - discarded.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,16 @@
 * text=auto
 
 
-/** export-ignore
+### Export -ignores
+bookmark-productivity/ export-ignore
+bookmark-productivity/** export-ignore
 
-# Released sub folder   
-!/browser-data/*
+# browser-data/src/ export-ignore
+browser-data/TODO.md export-ignore
+
+*.zip export-ignore
+# README.md export-ignore
+
+.gitattributes export-ignore
+.gitignore export-ignore
+
