--- a/browser-data/src/manifest.json
+++ b/browser-data/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Browser-data",
+    "name": "Browser-data-dev",
     "description": "Get Browser data like tab and window counts, history and memory",
     "manifest_version": 3,
     "version": "0.2.0",
